src/test/deca/syntax/valid/inst2.deca
// Description :
//   test pour instructions corrélées

// Résultats :
//   Ok
{
int x = 2;
int y = 3;
int z = 4;
z = 3*(x/y) + z ;
}