src/test/deca/syntax/invalid/test_synt22.deca
//Resultat:
//      Erreur syntaxique : ligne 3
class A {
float method(int y){
return y y;
}
}
